# ChangeLog for net-wireless/linux-wlan-ng
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/linux-wlan-ng/Attic/ChangeLog,v 1.26 2003/06/13 15:13:48 latexer Exp $

*linux-wlan-ng-0.2.1_pre8 (13 Jun 2003)

  13 Jun 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.1_pre8.ebuild:
  New pre version which hopefully fixes pcmcia issues

*linux-wlan-ng-0.2.1_pre3 (29 Apr 2003)

  29 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.1_pre3.ebuild:
  Latest pre-release.

*linux-wlan-ng-0.2.1_pre2 (25 Apr 2003)

  25 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.1_pre2.ebuild:
  Bump

*linux-wlan-ng-0.2.1_pre1 (25 Apr 2003)

  20 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.1_pre1.ebuild:
  Bump

*linux-wlan-ng-0.2.0-r2 (10 Apr 2003)

  15 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.0-r2.ebuild:
  Marked stable for x86

  10 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.0-r2.ebuild:
  Uses gentoo style init script

  10 Apr 2003; Peter Johanson <latexer@gentoo.org> :
  Fixed all ebuilds to do check_KV if needed.
  
*linux-wlan-ng-0.2.1_pre1 (10 Apr 2003)

  10 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.1_pre1.ebuild:
  Version bump, uses gentoo style init script.

*linux-wlan-ng-0.2.0-r1 (03 Apr 2003)

  07 Apr 2003; Peter Johanson <latexer@gentoo.org>
  linux-wlan-ng-0.2.0-r1.ebuild:
  Major fix to how the pcmcia-cs version is handled. Much better now.

  03 Apr 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.0-r1.ebuild:
  Version bump with fixed pcmcia-cs detection

  24 Mar 2003; Peter Johanson <latexer@gentoo.org> linux-wlan-ng-0.2.0.ebuild :
  Using has_version now to resolve the PCMCIA_VERSION issues. no more calling commands that portage
  doesn't know about. This should fix it.

  8 Mar 2003; Peter Johanson <latexer@gentoo.org> :