@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/airtraf/Attic/airtraf-1.0.ebuild,v 1.4 2003/02/14 07:40:08 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/airtraf/Attic/airtraf-1.0.ebuild,v 1.5 2003/07/13 20:56:55 aliz Exp $
 
 DESCRIPTION="AirTraf 802.11b Wireless traffic sniffer"
 HOMEPAGE="http://www.elixar.com/"
@@ -10,7 +10,7 @@ IUSE=""
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 
 DEPEND=">=net-libs/libpcap-0.7.1"
 
