@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ap-utils/Attic/ap-utils-1.3.1.ebuild,v 1.2 2003/02/18 13:39:28 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ap-utils/Attic/ap-utils-1.3.1.ebuild,v 1.3 2003/07/13 20:56:55 aliz Exp $
 
 IUSE="nls"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://ap-utils.polesye.net/"
 SRC_URI="http://umn.dl.sourceforge.net/sourceforge/ap-utils/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 DEPEND=">=bison-1.34"
 RDEPEND=""
 
