@@ -1,13 +1,13 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-kernel/Attic/bluez-kernel-2.3.ebuild,v 1.2 2003/02/13 15:27:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-kernel/Attic/bluez-kernel-2.3.ebuild,v 1.3 2003/07/13 20:56:55 aliz Exp $
 
 DESCRIPTION="bluetooth kernel drivers"
 HOMEPAGE="http://bluez.sourceforge.net/"
 SRC_URI="http://bluez.sourceforge.net/download/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
 DEPEND=""
 S="${WORKDIR}/${P}"
