@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/kwifimanager/Attic/kwifimanager-1.0.0.ebuild,v 1.2 2003/02/13 15:29:37 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/kwifimanager/Attic/kwifimanager-1.0.0.ebuild,v 1.3 2003/07/13 20:56:55 aliz Exp $
 
 inherit kde-base
 need-kde 3
@@ -9,5 +9,5 @@ DESCRIPTION="KWiFiManager - the wireless LAN client manager for KDE3"
 SRC_URI="mirror://sourceforge/${PN}/${P}-1.tar.gz"
 HOMEPAGE="http://kwifimanager.sourceforge.net/"
 LICENSE="GPL-2"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
